# PyHelios

./: .gitignore  .gitmodules  CLAUDE.md  CMAKE_CLEANUP_SUMMARY.md  CMakeCache.txt  CPU_ONLY_SKYVIEWFACTOR_SUMMARY.md  FINAL_CLEANUP_SUMMARY.md  FINAL_GPU_CLEANUP_COMPLETE.md  MANIFEST.in  README.md  pyhelios_config.yaml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py  skyviewfactor_results.txt  skyviewfactor_robust_results.txt  skyviewfactor_uuid_results.txt  test_macros.cu
.claude/agents/: code-architect.md  code-reviewer.md  context-gatherer.md  debug-specialist.md  helios-cpp-expert.md  test-coverage-maximizer.md
.github/scripts/: test_wheel_import.py  validate_wheel.py
.github/workflows/: build-wheels.yml  docs.yml  pytest-linux-gpu.yaml  pytest-linux.yml  pytest-macos.yml  pytest-windows.yml
build_scripts/: __init__.py  build_helios  build_helios.py  manylinux_zlib_patch.cmake  prepare_wheel.py
docs/: CHANGELOG.md  Doxyfile.python  DoxygenLayout.xml  PyHelios_binary_distribution_plan.txt  api_guide.md  cpp_plugin_integration_guide.md  cross_platform.md  file_io.md  getting_started.md  header.html  installation.md  mock_mode.md  overview.md  plugin_boundarylayerconductance.md  plugin_energybalance.md  plugin_integration_guide.md  plugin_photosynthesis.md  plugin_plantarchitecture.md  plugin_radiation.md  plugin_skyviewfactor.md  plugin_solarposition.md  plugin_stomatalconductance.md  plugin_system.md  plugin_visualizer.md  plugin_weberpenntree.md  plugins_main.md  quick_start.md  user_guide.md
docs/assets/: pyhelios-custom.css
docs/examples/: context_sample.py  external_geometry_sample.py  plantarchitecture_sample.py  plantarchitecture_visualizer_example.py  primitive_data_array_example.py  primitive_data_sample.py  pyhelios_visualize_maillage.py  pyhelios_visualize_maillage_2.py  pyhelios_visualizer_demo.py  radiation_camera_example.py  simple_radiation_test.py  stanford_bunny_energy_balance.py  stanford_bunny_radiation.py  visualization_sample.py  wpt_sample.py
docs/examples/models/: LABINTECH.mtl  suzanne.mtl  suzanne.ply
example/: heatmap_skyviewfactor.py  improved_radiation_calculation.py  optix_demo.py  orbital_visualization_demo.py  pyhelios_radiation_pure.py  pyhelios_visualize_maillage.py  pyhelios_visualize_test.py  radiation_comparison.py  robustness_test.py  simple_svf_calculator.py  sky_view_factor_calculation.py  skyviewfactor_example.py  skyviewfactor_gpu_test.py  skyviewfactor_results.txt  svf_usage_guide.py  utils.py  visualize_skyviewfactor.py
example/models/: MAISON_EP_1.mtl  map.obj.mtl
native/include/: pyhelios_wrapper.h  pyhelios_wrapper_boundarylayerconductance.h  pyhelios_wrapper_common.h  pyhelios_wrapper_context.h  pyhelios_wrapper_energybalance.h  pyhelios_wrapper_photosynthesis.h  pyhelios_wrapper_plantarchitecture.h  pyhelios_wrapper_radiation.h  pyhelios_wrapper_skyviewfactor.h  pyhelios_wrapper_solarposition.h  pyhelios_wrapper_stomatalconductance.h  pyhelios_wrapper_visualizer.h  pyhelios_wrapper_weberpenntree.h
native/src/: pyhelios_wrapper.cpp  pyhelios_wrapper_boundarylayerconductance.cpp  pyhelios_wrapper_common.cpp  pyhelios_wrapper_context.cpp  pyhelios_wrapper_energybalance.cpp  pyhelios_wrapper_photosynthesis.cpp  pyhelios_wrapper_plantarchitecture.cpp  pyhelios_wrapper_radiation.cpp  pyhelios_wrapper_skyviewfactor.cpp  pyhelios_wrapper_solarposition.cpp  pyhelios_wrapper_stomatalconductance.cpp  pyhelios_wrapper_visualizer.cpp  pyhelios_wrapper_weberpenntree.cpp
pyhelios/: Context.py  Global.py  RadiationModel.py  SkyViewFactorModel.py  Visualizer.py  WeberPennTree.py  __init__.py  _version.py  types.py
pyhelios/assets/: __init__.py
pyhelios/config/: config_manager.py  plugin_metadata.py  plugin_profiles.py
pyhelios/plugins/: __main__.py  loader.py  registry.py
pyhelios/validation/: plugin_decorators.py  plugins.py
pyhelios/wrappers/: DataTypes.py  UContextWrapper.py  URadiationModelWrapper.py  USkyViewFactorModelWrapper.py  UVisualizerWrapper.py  __init__.py
pyhelios_build/: CMakeLists.txt  main.cpp
pyhelios_build/cmake/: PluginSelection.cmake
tests/: __init__.py  conftest.py  test_boundarylayerconductance.py  test_context.py  test_context_compound_geometry.py  test_context_file_loading.py  test_cross_platform.py  test_datatypes.py  test_energybalance.py  test_exception_handling.py  test_external_geometry.py  test_file_loading_api.py  test_integration.py  test_multi_texture.py  test_native_build.py  test_photosynthesis.py  test_plantarchitecture.py  test_plugin_system.py  test_radiation_model.py  test_radiation_validation.py  test_skyviewfactor.py  test_solarposition.py  test_stomatalconductance.py  test_utils.py  test_visualizer.py  test_weberpenntree.py
